# lxft_practica

./: .gitignore  README.md  partitions.csv  run.sh  sdkconfig
docker-mosquitto/: Readme.md  broker.sh  client.sh  dhcp.conf  dhcp.sh  mosquitto.conf  update_firmware.sh
docker-mosquitto/certs/: certs_generator.sh
docker-mosquitto/home_assistant/: compose.yaml  configuration.yaml
main/: CMakeLists.txt  Kconfig.projbuild  Readme.md  dns_server.c  http_server.c  leds.c  main.c  task_comms.c  task_sensors.c  task_server.c  wifi.c
main/certs/: prvtkey.pem  servercert.pem
main/h/: dns_server.h  http_server.h  https_utils.h  leds.h  task_sensors.h  wifi.h
utils/: Readme.md  update_firmware.sh
utils/DHCP/: dhcp.conf
utils/certs/: certs_generator.sh  client_esp1.conf  client_esp1.crt  client_esp1.csr  client_esp1.key  client_esp2.conf  client_esp2.crt  client_esp2.csr  client_esp2.key  client_esp3.conf  client_esp3.crt  client_esp3.csr  client_esp3.key
utils/home_assistant/: automations.yaml  compose.yaml  configuration.yaml  run_dockers.sh
